--- a/fonts.css
+++ b/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
         font-family: 'Cream';
-        src: url(https://file.garden/Z7q-3boECTYzyhfl/cream-DEMO.otf);
+        src: url('https://devkrab.github.io/cream-demo.otf');
     }
 
 @font-face {
