--- a/polaroid.css
+++ b/polaroid.css
@@ -1,3 +1,14 @@
+* {
+      --icon-size: 5rem;
+    --white: #FFFFFF;
+    --light: #F7EAD0;
+    --bright: #FDD9D9;
+    --bright2: pink;
+    --dark: #8F6E56;
+    --dark2: #422c21;
+    --black: #000000;
+}
+
 #album {
   width: clamp(300px, 50%, 50rem);
   display: flex;
