--- a/photo.css
+++ b/photo.css
@@ -21,7 +21,7 @@
   flex-direction: column;
   height: 100%;
   justify-content: center;
-      place-content: center;
+margin: auto;
 }
 
 #polaroids {
